[package]
name = "sync-block"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.21.0"
base64 = "0.21.2"
serde = { version = "1.0.175", default-features = false }
serde_json = { version = "1.0.100", features = ["std"] }
serde_with = { version = "2.3.3", default-features = false }
bincode = "1.3.3"
hyper = {version = "0.14.27", features = ["full"]}
tokio = { version = "1.30.0", features = ["full"] }
dotenv = "0.15"
lazy_static = "1.4"
reqwest = "0.11.0"