[package]
name = "mc-sync-block"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.21.0"
lazy_static = "1.4.0"
base64 = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, features = ["std"] }
serde_with = { workspace = true, default-features = false }
bincode = { workspace = true }
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
dotenv = { workspace = true }
mc-config = { workspace = true }
